--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
+
 body {
+    font-family: "SUSE", sans-serif;
     margin: 0;
     padding: 0;
 }
