--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 header {
     width: 100%;
     height: 100vh;
-    background: url(header_bg.jpg);
+    background: url(header-bg.jpg);
     background-size: cover;
     display: flex;
 }
