--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
 
 body {
-    font-family: "SUSE", sans-serif;
+    font-family: "Inter";
+    font-weight: 600;
+    font-style: italic;
     margin: 0;
     padding: 0;
 }
